fixed text overflow in recipeCard

--- a/frontend/styles/components/_recipeCard.module.scss
+++ b/frontend/styles/components/_recipeCard.module.scss
@@ -13,7 +13,6 @@
         display: flex;
         justify-content: space-around;
         width: 100%;
-
         .profile_pic {
             width: 16%;
         }
@@ -24,18 +23,15 @@
             width: 70%;
             flex-direction: column;
             justify-content: center;
-
-            display: -webkit-box;
             overflow: hidden;
-            -webkit-line-clamp: 1;
-            text-overflow: hidden;
+            white-space: nowrap;
+
             .rating {
                 background-color: white;
                 display: flex;
                 width: 100%;
                 align-items: center;
                 justify-content: flex-start;
-
                 .rating_icons {
                     display: flex;
                     width: 3rem;
@@ -76,9 +72,9 @@
         margin: 2.5% 0;
         flex-direction: column;
         width: 16rem;
-        display: -webkit-box;
+        justify-content: center;
         overflow: hidden;
-        -webkit-line-clamp: 2;
+        white-space: nowrap;
     }
     .detail_container_3 {
         position: relative;
